[project]
name = "pygitguard"
version = "0.1.0"
authors = [
  { name = "Diogo Ferreira da Silva", email = "diogo@example.com" }
]
description = "Uma ferramenta para proteger repositórios Git usando IA local."

[project.urls]
"Homepage" = "https://github.com/digo5ds"
"Repository" = "https://github.com/digo5ds/pygitguard"
"LinkedIn" = "https://www.linkedin.com/in/diogosilvaf/"
