[project]
name = "pygitguard"
version = "1.0.2"
authors = [
  { name = "Diogo Ferreira da Silva"}
]
description = "A tool to prevent you from pushing sensitive files to your repository."

[project.urls]
Homepage = "https://github.com/digo5ds"
Repository = "https://github.com/digo5ds/pygitguard"
LinkedIn = "https://www.linkedin.com/in/diogosilvaf/"

[project.scripts]
pygitguard = "pygitguard.cli:main"
