[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygitguard"
version = "1.0.2"
description = "A tool to prevent you from pushing sensitive files to your repository."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Diogo Ferreira da Silva" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/digo5ds"
Repository = "https://github.com/digo5ds/pygitguard"
LinkedIn = "https://www.linkedin.com/in/diogosilvaf/"

[project.scripts]
pygitguard = "pygitguard.cli:main"
